--- a/libraryBACKEND/src/main/resources/application.properties
+++ b/libraryBACKEND/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=library
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/library_db
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
